emoji alignment fixed

--- a/resources/sass/application/components/emoji-picker.scss
+++ b/resources/sass/application/components/emoji-picker.scss
@@ -5,6 +5,7 @@
     -moz-user-select: auto;
     -ms-user-select: auto;
     user-select: auto;
+    vertical-align: middle;
 }
 
 .emoji-container {
